--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <HTML>
     <head>
         <title>howmanyhotdogs</title>
+        <meta name="description" content="The premier USD-to-CHD currency converter" />
         <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
         <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
